<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo_inicio_inicio"
    tools:context=".ui.inicio.InicioFragment">
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="top|center"
        android:foregroundGravity="center"/>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bordes_inicioframe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/acostastudio"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:gravity="top|start"
            android:layout_gravity="top|start"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuestras_oficinas"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"/>
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/oficinas"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suscribete_parrafo"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/light_blue"
                    android:layout_marginTop="15dp"
                    android:text="Suscríbete!"
                    app:cornerRadius="25dp"
                    android:layout_marginBottom="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion1"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion2"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion3"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/btnMaps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/light_blue"
                    android:layout_marginTop="15dp"
                    android:text="@string/nuestra_ubicacion"
                    app:cornerRadius="25dp"
                    android:layout_marginBottom="25dp"/>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</FrameLayout>