<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    android:orientation="vertical"
    tools:context=".ui.info.InfoFragment">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bordes_loginframe">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/who_are_we"
            android:textColor="@color/white"
            android:textSize="37sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fillViewport="true"> <!-- Agregar el atributo fillViewport a true para expandir el contenido del ScrollView -->

            <LinearLayout
                android:id="@+id/linearInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/parrafo1"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/imagen_programacion_uno" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/parrafo2"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/logo" />
                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="50dp"
                        android:background="@drawable/newbrand" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/parrafo3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/parrafo4"
                    android:textSize="16sp" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/light_blue"
                    android:text="Suscríbete!"
                    android:textColor="@color/white"
                    app:cornerRadius="25dp" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/github"
            android:layout_marginStart="23dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="github" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/youtube"
            android:clickable="true"
            android:focusable="true"
            android:onClick="youtube" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/instagram"
            android:clickable="true"
            android:focusable="true"
            android:onClick="instagram" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/google"
            android:clickable="true"
            android:focusable="true"
            android:onClick="google" />

    </LinearLayout>

</FrameLayout>